# azteca

./: .clang-format  .clang-tidy  .editorconfig  .gitattributes  .gitignore  .prettierignore  .prettierrc.json  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md  package-lock.json  package.json
.github/: pull_request_template.md
.github/workflows/: ci.yml
cmake/: ClangFormat.cmake  ClangTidy.cmake
docs/: README.md  development.md
docs/adr/: 0001_no_fake_this.md  0002_use_clang_ast_not_text_rewrite.md  0003_heart_mode_and_live_mode.md  0004_generate_new_code_do_not_modify_product_code.md  0005_compile_database_as_primary_input.md  0006_single_public_extraction_model.md  0007_semantic_envelope_over_modes.md  0008_boundary_shims_as_valid_unit_extraction.md  0009_mmir_between_clang_ast_and_codegen.md  0010_gtest_as_default_runner.md  0011_dependency_transcript_over_handwritten_fakes.md
docs/design/: 00_project_charter.md  01_semantic_contract.md  02_architecture.md  03_extraction_pipeline.md  04_receiver_model.md  05_lowering_rules.md  06_dependency_model.md  07_live_mode.md  08_codegen_spec.md  09_cli_and_outputs.md  10_test_strategy.md  11_unsupported_and_fallbacks.md  13_unified_extraction_policy.md  14_semantic_envelope.md  15_method_meaning_ir.md  16_universal_lowering_strategy.md  17_product_experience_and_governance.md  19_correctness_model.md  20_runtime_contract.md  21_end_to_end_examples.md  22_dependency_transcript_and_stubbing.md  23_gtest_integration.md
docs/planning/: 12_implementation_plan.md  18_implementation_roadmap.md  25_phase_a_inspect_coverage.md
docs/reference/: azteca_design_all_in_one_v3.md
docs/review/: 24_total_review_and_self_verification.md
docs/spec/: phase_a_cli.md  phase_a_inspect_schema_v2.md  phase_a_text_output.md
include/azteca/: Assert.hpp  DiagnosticCatalog.hpp  Diagnostics.hpp  ExtractionPlan.hpp  InspectFrontend.hpp  InspectReport.hpp  MMIR.hpp  MethodSpec.hpp  SourceLocation.hpp
scripts/: generate-reference.mjs  validate-phase-a-json.mjs
src/: MethodSpec.cpp
src/cli/: main.cpp
src/collect/: InspectCollector.cpp  InspectCollector.hpp  PathAnalyzer.cpp  PathAnalyzer.hpp
src/frontend/: InspectFrontend.cpp  InspectSource.cpp  InspectSource.hpp  PlanBuilder.cpp  PlanBuilder.hpp  PlanBuilderAst.cpp  PlanBuilderAst.hpp  PlanBuilderDependencies.cpp  PlanBuilderState.cpp
src/gtest/: GTestPreview.cpp  GTestPreview.hpp
src/mmir/: MMIR.cpp
src/plan/: ExtractionPlan.cpp  RuleCoverageRegistry.cpp  RuleCoverageRegistry.hpp
src/report/: DiagnosticCatalog.cpp  InspectReport.cpp  JsonWriter.cpp  JsonWriter.hpp
src/resolve/: MethodSelector.cpp  MethodSelector.hpp
tests/contract/schema_v2/: PhaseASchemaV2.cmake  azteca_phase_a.schema.json
tests/fixtures/phase_a/coverage/: CMakeLists.txt  coroutine.cpp
tests/fixtures/phase_a/robustness/: CMakeLists.txt  broken.cpp  target.cpp
tests/fixtures/phase_a/simple/: CMakeLists.txt  account.cpp  ambiguous_a.cpp  ambiguous_b.cpp  edge_cases.cpp  hardening.cpp  order_service.cpp  real_project.cpp  real_project_duplicate_a.cpp  real_project_duplicate_b.cpp  service.cpp  simple_scenarios.cpp  syntax_matrix.cpp
tests/fixtures/phase_a/simple/include/real_project/: api.hpp
tests/golden/phase_a/: account_withdraw.inspect.json  dependency_kinds_run.inspect.json  edge_cases_member_pointer_report.inspect.json  escape_example_link.inspect.json  gauge_reading.inspect.json  gauge_record.inspect.json  loop_example_run.inspect.json  order_service_check.inspect.json  ordered_events_run.inspect.json  real_project_runner_inspect.inspect.json  service_handle.inspect.json  service_handle.inspect.txt  syntax_matrix_macro_use.inspect.json
tests/golden/phase_a/cli/: explain_AZT-E0008.txt  help.txt
tests/golden/phase_a/coverage_observations/: coro_host_run.inspect.json  edge_cases_branch_controls.inspect.json  edge_cases_default_argument.inspect.json  edge_cases_default_initialized_read.inspect.json  edge_cases_explicit_this_read.inspect.json  edge_cases_field_address.inspect.json  edge_cases_noexcept_read.inspect.json  edge_cases_return_self_reference.inspect.json  edge_cases_ternary.inspect.json  edge_cases_value_category_and_casts.inspect.json  outer_container_inner_run.inspect.json  syntax_matrix_base_global_static.inspect.json  syntax_matrix_dispatch.inspect.json  syntax_matrix_exception_run.inspect.json  syntax_matrix_first_byte.inspect.json  syntax_matrix_identity_and_type.inspect.json  syntax_matrix_lambda_run.inspect.json  syntax_matrix_operator_path.inspect.json  syntax_matrix_release.inspect.json  syntax_matrix_reset_in_place.inspect.json  syntax_matrix_structured.inspect.json  syntax_matrix_switch_loop.inspect.json  syntax_matrix_unevaluated.inspect.json  template_example_target.inspect.json
tests/integration/: PhaseACliSurface.cmake  PhaseACoverageMatrix.cmake  PhaseACoverageObservations.cmake  PhaseAEncodingRobustness.cmake  PhaseAInspect.cmake  PhaseANegativeRobustness.cmake  PhaseANegativeSuite.cmake  PhaseAOutputQuality.cmake
tests/negative/phase_a/: CMakeLists.txt  declaration_only.cpp
tests/negative/phase_a_malformed/: CMakeLists.txt  malformed_macro.cpp
tests/perf/phase_a/: PhaseAPerfSmoke.cmake  baseline.json
tests/unit/: AssertTests.cpp  DiagnosticCatalogTests.cpp  ExtractionPlanTests.cpp  GTestPreviewTests.cpp  InspectCollectorTests.cpp  JsonWriterTests.cpp  MethodSpecTests.cpp  RuleCoverageRegistryTests.cpp
